--- a/Moon-Rabbits-Dream-About-Virtual.theme.css
+++ b/Moon-Rabbits-Dream-About-Virtual.theme.css
@@ -44,7 +44,7 @@
     --custom-text: "TSUKINO MITO";
 
     /* General Colors */
-    --border-color: #da4a60;
+    --border-color: #FFC0CB;
     --drag-gradient1: #e8c4d3;
     --drag-gradient2: #e39ba7;
     --name-bg: #d95b72;
@@ -53,8 +53,8 @@
     --bg-gradient1: #e297b2;
     --bg-gradient2: #c0b4d5;
     --bg-gradient3: #54b5de;
-    --bg-image: none; /* Write the image url, example url("your url") [none is default]*/
-    --opacity: 0; /* Value in numbers from 0 to 1, but there is a limit */
+    --bg-image: https://i.pinimg.com/originals/12/b0/17/12b0176f911f2f0dd724c9716e893e41.jpg; /* Write the image url, example url("your url") [none is default]*/
+    --opacity: 0.3; /* Value in numbers from 0 to 1, but there is a limit */
     --bg-blur: 6px; /* Value in px */
 
     /* HSL(Hue, Saturation, Lightness). This values will change the accent color (That blue color in most buttons) */
