--- a/Moon-Rabbits-Dream-About-Virtual.theme.css
+++ b/Moon-Rabbits-Dream-About-Virtual.theme.css
@@ -44,7 +44,7 @@
     --custom-text: "TSUKINO MITO";
 
     /* General Colors */
-    --border-color: #FFC0CB;
+    --border-color: #FF10F0;
     --drag-gradient1: #e8c4d3;
     --drag-gradient2: #e39ba7;
     --name-bg: #d95b72;
