--- a/Moon-Rabbits-Dream-About-Virtual.theme.css
+++ b/Moon-Rabbits-Dream-About-Virtual.theme.css
@@ -33,9 +33,6 @@
 /* Pop Effect */
 @import url("https://zuzumi-f.github.io/Moon-Rabbits-Dream-About-Virtual/release/pop.css");
 
-/* Reverse the position of Server list and members */
-@import url('https://zuzumi-f.github.io/Moon-Rabbits-Dream-About-Virtual/release/reverse.css');
-
 /*------------------------------------------------------
                 all the customization
 ------------------------------------------------------*/
@@ -45,14 +42,11 @@
 
     /* General Colors */
     --border-color: #FFC0CB;
-    --drag-gradient1: #800080;
+    --drag-gradient1: #FFB6C1;
     --drag-gradient2: #e39ba7;
     --name-bg: #d95b72;
 
     /* Background Colors & BG Image */
-    --bg-gradient1: #e297b2;
-    --bg-gradient2: #c0b4d5;
-    --bg-gradient3: #54b5de;
     --bg-image: url(https://i.pinimg.com/originals/12/b0/17/12b0176f911f2f0dd724c9716e893e41.jpg); /* Write the image url, example url("your url") [none is default]*/
     --opacity: 1; /* Value in numbers from 0 to 1, but there is a limit */
     --bg-blur: 6px; /* Value in px */
